// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/SelectSidebar default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c14 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7 svg {
  display: block;
}

.c7 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7:hover {
  background-color: rgb(33,18,94);
}

.c7:hover svg path {
  fill: #fff;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1.875rem;
}

.c6 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: uppercase;
  padding-right: 0.6rem;
  margin: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  color: unset;
}

.c10:hover {
  background-color: rgba(6,132,123,0.25);
  color: #06a09e;
  font-weight: 600;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  font-weight: 600;
  color: unset;
}

.c11:hover {
  background-color: rgba(6,132,123,0.25);
  color: #06a09e;
  font-weight: 600;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  color: #7d7d7d;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: auto;
  min-height: 455px;
  height: 100%;
  background-color: #fff;
  right: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-animation: brnJVY 0.4s both;
  animation: brnJVY 0.4s both;
  -webkit-animation-delay: .1s;
  animation-delay: .1s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  top: 0;
  z-index: 2;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  box-shadow: 6px 0px 30px rgba(0,0,0,0.15);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: calc(100vh - 1.875rem);
  overflow: auto;
}

.c9 {
  cursor: pointer;
}

.c12 {
  cursor: default;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="attributeSelection"
    onClick={[Function]}
    open={true}
  >
    <div
      className="c2"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h4
              className="c6"
              size="md"
            >
              <span>
                PLEASE SELECT SIZE
              </span>
            </h4>
          </div>
          <div
            className="c7"
            data-test="closeOverlayButton"
            onClick={[Function]}
          >
            <svg
              height={19}
              viewBox="0 0 32 32"
              width={19}
            >
              <path
                d="M16 12.8l-12.8-12.8-3.2 3.2 12.8 12.8-12.8 12.8 3.2 3.2 12.8-12.8 12.8 12.8 3.2-3.2-12.8-12.8 12.8-12.8-3.2-3.2-12.8 12.8z"
                fill="#c4c4c4"
              />
            </svg>
          </div>
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c11"
              data-test="attributeOption"
              data-test-id="7 1/8"
              disabled={false}
              onClick={[Function]}
              selected={true}
            >
              7 1/8
              <svg
                height={16}
                viewBox="0 0 32 32"
                width={16}
              >
                <path
                  d="M31.416 2.142l-19.195 29.858-11.638-12.414 2.889-2.709 8.164 8.708 16.448-25.586 3.331 2.142z"
                  fill="#13BEBB"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 1/4"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 1/4
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 3/84"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 3/8
            </div>
          </div>
          <div
            className="c12"
            disabled={true}
          >
            <div
              className="c13"
              data-test="attributeOption"
              data-test-id="7 1/2"
              disabled={true}
              onClick={[Function]}
              selected={false}
            >
              7 1/2
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 5/8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 5/8
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 3/4"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 3/4
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 7/8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 7/8
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              8
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c14"
  />
</div>
`;

exports[`Storyshots @components/organisms/SelectSidebar with footer 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c16 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c15 {
  font-size: 1rem;
  font-weight: 600;
  color: rgb(33,18,94);
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c15:hover {
  color: #513CA3;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7 svg {
  display: block;
}

.c7 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7:hover {
  background-color: rgb(33,18,94);
}

.c7:hover svg path {
  fill: #fff;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1.875rem;
}

.c6 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: uppercase;
  padding-right: 0.6rem;
  margin: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  color: unset;
}

.c10:hover {
  background-color: rgba(6,132,123,0.25);
  color: #06a09e;
  font-weight: 600;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  font-weight: 600;
  color: unset;
}

.c11:hover {
  background-color: rgba(6,132,123,0.25);
  color: #06a09e;
  font-weight: 600;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
  color: #7d7d7d;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: auto;
  min-height: 455px;
  height: 100%;
  background-color: #fff;
  right: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-animation: brnJVY 0.4s both;
  animation: brnJVY 0.4s both;
  -webkit-animation-delay: .1s;
  animation-delay: .1s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  top: 0;
  z-index: 2;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  box-shadow: 6px 0px 30px rgba(0,0,0,0.15);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: calc(100vh - 1.875rem);
  overflow: auto;
}

.c14 {
  background-color: #f1f5f5;
  padding: 1.3rem 1.875rem 1rem 1.875rem;
}

.c9 {
  cursor: pointer;
}

.c12 {
  cursor: default;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="attributeSelection"
    onClick={[Function]}
    open={true}
  >
    <div
      className="c2"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h4
              className="c6"
              size="md"
            >
              <span>
                PLEASE SELECT SIZE
              </span>
            </h4>
          </div>
          <div
            className="c7"
            data-test="closeOverlayButton"
            onClick={[Function]}
          >
            <svg
              height={19}
              viewBox="0 0 32 32"
              width={19}
            >
              <path
                d="M16 12.8l-12.8-12.8-3.2 3.2 12.8 12.8-12.8 12.8 3.2 3.2 12.8-12.8 12.8 12.8 3.2-3.2-12.8-12.8 12.8-12.8-3.2-3.2-12.8 12.8z"
                fill="#c4c4c4"
              />
            </svg>
          </div>
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c11"
              data-test="attributeOption"
              data-test-id="7 1/8"
              disabled={false}
              onClick={[Function]}
              selected={true}
            >
              7 1/8
              <svg
                height={16}
                viewBox="0 0 32 32"
                width={16}
              >
                <path
                  d="M31.416 2.142l-19.195 29.858-11.638-12.414 2.889-2.709 8.164 8.708 16.448-25.586 3.331 2.142z"
                  fill="#13BEBB"
                />
              </svg>
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 1/4"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 1/4
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 3/84"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 3/8
            </div>
          </div>
          <div
            className="c12"
            disabled={true}
          >
            <div
              className="c13"
              data-test="attributeOption"
              data-test-id="7 1/2"
              disabled={true}
              onClick={[Function]}
              selected={false}
            >
              7 1/2
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 5/8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 5/8
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 3/4"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 3/4
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="7 7/8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              7 7/8
            </div>
          </div>
          <div
            className="c9"
            disabled={false}
          >
            <div
              className="c10"
              data-test="attributeOption"
              data-test-id="8"
              disabled={false}
              onClick={[Function]}
              selected={false}
            >
              8
            </div>
          </div>
        </div>
        <div
          className="c14"
          onClick={[Function]}
        >
          <button
            className="c15"
            color="secondary"
            data-test="footerActionButton"
            size="md"
          >
            SHOW SIZE TABLE
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c16"
  />
</div>
`;
